deal with network config